Fix sonar coverage
Signed-off-by: Franck LECUYER <franck.lecuyer@rte-france.com>